--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+//    compileOptions.encoding = 'ISO-8859-1'
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
