--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.AddKnnActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:parentActivityName=".activity.MainActivity">
+        <activity
+            android:name=".activity.AddKnnActivity"
+            android:parentActivityName=".activity.trialMainActivity"
+            android:windowSoftInputMode="stateHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.genar.hktportal.activity.MainActivity" />
+                android:value="com.genar.hktportal.activity.trialMainActivity" />
         </activity>
         <activity android:name=".activity.BarcodeActivity" />
         <activity android:name=".activity.LoginActivity">
+
+        </activity>
+        <activity android:name=".activity.trialMainActivity" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity"></activity>
     </application>
 
 </manifest>
